k8s-service/gke-cloud-cdn/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: a901002666/flask-debug:1.0.6
        ports:
        - containerPort: 8000
          name: http

---
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    cloud.google.com/backend-config: '{"default": "api-gclb-cdn"}'
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 3001
      targetPort: http
