k8s-service/gke-cloud-cdn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gclb
spec:
  tls:
  - secretName: nino.baby.tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3001
    host: nino.baby
